k8s/config/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    prod-gateway-access: "true"
